<resources>
    <string name="app_name">PlacePost</string>
    <string name="action_settings">Settings</string>
    <string name="action_admin">Admin Settings</string>
    <string name="action_profile">Profile</string>
    <string name="action_home">Home</string>
    <string name="login_title">Login:</string>
    <string name="register_title">Register:</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="email">Email:</string>
    <string name="login_button_text">Login</string>
    <string name="login_string">Log In</string>
    <string name="register">Register:</string>
    <string name="get_started_button_label">Get Started</string>
    <string name="landing_title">Place Post</string>
    <string name="slide_1_text">Leave messages in the places that matter</string>
    <string name="slide_2_text">So you don\'t forget the milk</string>
    <string name="slide_3_text">So the flowers get water</string>
    <string name="new_user_string">New User?</string>
    <string name="existing_user_string">Existing User?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="back_to_landing_string">Back</string>
    <string name="logout_link">Logout</string>
</resources>
