<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/landing_main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/landing_1"
    >

    <ImageView
        android:id="@+id/landing_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="80dp"
        android:maxHeight="80dp"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo_landing"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        >
    </ImageView>

    <TextView
        android:id="@+id/slogan_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/landing_logo"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="100dp"
        android:gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/slide_1_text"
        android:textColor="@color/white"
        android:textSize="24dp"
     />

    <Button
        android:id="@+id/register_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/slogan_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/blue"
        android:background="@drawable/white_rounded_filled_button"
        android:text="@string/get_started_button_label"
        android:textSize="14dp"
        />

    <Button
        android:id="@+id/login_link"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/white"
        android:background="@drawable/white_rounded_button"
        android:text="@string/login_string"
        android:textSize="14dp"
        />
      />

</RelativeLayout>